--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.zakgof</groupId>
-			<artifactId>velvetdb</artifactId>
+			<artifactId>velvetdb-xodus</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -24,5 +24,17 @@
 			<artifactId>guice</artifactId>
 			<version>3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+			<version>1.2-b03</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 </project>
