--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,17 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<repositories>
+	    <repository>
+	        <id>velvetdb</id>
+	        <url>http://nexus2-zakk.rhcloud.com/content/repositories/snapshots/</url>
+	    </repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.zakgof</groupId>
 			<artifactId>velvetdb-xodus</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sparkjava</groupId>
