--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,13 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.zakgof:velvetdb-xodus:0.4.0-SNAPSHOT'
+    compile 'com.github.zakgof:velvetdb-xodus:0.6.0-SNAPSHOT'
     compile 'com.sparkjava:spark-template-thymeleaf:2.3'
     compile 'com.google.inject:guice:3.0'
     compile 'com.google:guava:20.0.0'
     compile 'commons-lang:commons-lang:2.1'
-    compileOnly 'javax.transaction:javax.transaction-api:1.2-b03'
+    compile 'com.google.code.gson:gson:2.8.5'
+    runtime 'javax.transaction:javax.transaction-api:1.2-b03'
 }
 
 tasks.withType(JavaCompile) {
