--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.2.0",
+    "react-cytoscape": "^1.0.6",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.0.17",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.2"
   },
   "scripts": {
     "start": "react-scripts start",
