--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'signing'
+plugins {
+  id 'java'
+  id 'maven'
+  id 'signing'
+}
 
 compileJava.options.encoding = 'UTF-8'
 
@@ -12,19 +14,21 @@ def ossrhPassword = hasProperty('ossrhPassword') ? ossrhPassword : System.getenv
 
 repositories {
     mavenCentral()
-     maven {
+    maven {
         url "https://oss.sonatype.org/content/repositories/snapshots/"
     }
 }
 
 dependencies {
     compile 'com.github.zakgof:velvetdb-xodus:0.6.0-SNAPSHOT'
-    compile 'com.sparkjava:spark-template-thymeleaf:2.3'
+    compile 'com.sparkjava:spark-core:2.3'
     compile 'com.google.inject:guice:3.0'
-    compile 'com.google:guava:20.0.0'
+    compile 'com.google.guava:guava:26.0-jre'
     compile 'commons-lang:commons-lang:2.1'
     compile 'com.google.code.gson:gson:2.8.5'
-    runtime 'javax.transaction:javax.transaction-api:1.2-b03'
+    compile 'javax.transaction:javax.transaction-api:1.2-b03'
+    compileOnly 'javax.interceptor:javax.interceptor-api:1.2.2'
+    project(':frontend')
 }
 
 tasks.withType(JavaCompile) {
@@ -106,4 +110,19 @@ uploadArchives {
       }
     }
   }
+}
+
+jar {
+    into 'website', {
+        from(project('frontend').buildDir)
+    }
+}
+
+task fatjar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'com.zakgof.velvetdb.viewer.example.Main'
+    }
+    baseName = 'fatjar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
