--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.google.inject:guice:3.0'
     compile 'com.google.guava:guava:26.0-jre'
     compile 'commons-lang:commons-lang:2.1'
+    compile 'commons-io:commons-io:2.5'
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'javax.transaction:javax.transaction-api:1.2-b03'
     compileOnly 'javax.interceptor:javax.interceptor-api:1.2.2'
